--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@ under the License.
 			<version>1.2.62</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-client</artifactId>
+			<version>2.7.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
